# aicqSDK

./: .gitignore  INVOKE_AGENT_STREAM.md  INVOKE_AGENT_STREAM.md.bak_multisess_20260628_083603  INVOKE_AGENT_STREAM.md.bak_multisess_20260628_083648  LICENSE  README.md  README.md.bak_multisess_20260628_083603  README.md.bak_multisess_20260628_083648  SPEC.md  pyproject.toml
aicq/: __init__.py  core.py  crypto.py  db.py  invoke.py  loop.py  quickchat.py  server.py
go/: README.md  auth.go  client.go  crypto.go  db.go  ephemeral.go  errors.go  friends.go  go.mod  go.sum  invoke.go  invoke.go.bak_multisess_20260628_083603  messaging.go  types.go  ws.go  zagent_extensions.go
nodejs/: README.md  package-lock.json  package.json  tsconfig.json
nodejs/lib/: auth.d.ts  auth.d.ts.map  auth.js  auth.js.map  client.d.ts  client.d.ts.map  client.js  client.js.map  crypto.d.ts  crypto.d.ts.map  crypto.js  crypto.js.map  ephemeral.d.ts  ephemeral.d.ts.map  ephemeral.js  ephemeral.js.map  errors.d.ts  errors.d.ts.map  errors.js  errors.js.map  friends.d.ts  friends.d.ts.map  friends.js  friends.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  invoke.d.ts  invoke.d.ts.map  invoke.js  invoke.js.map  messaging.d.ts  messaging.d.ts.map  messaging.js  messaging.js.map  types.d.ts  types.d.ts.map  types.js  websocket.d.ts  (+3 more)
nodejs/src/: auth.ts  client.ts  crypto.ts  ephemeral.ts  errors.ts  friends.ts  index.ts  invoke.ts  messaging.ts  types.ts  websocket.ts
