[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicqSDK"
version = "0.11.2"
description = "AICQ AI Agent SDK — Lightweight Python SDK for AI agents to connect to AICQ server via WebSocket real-time mode (startLoop), E2EE, ephemeral rooms, QuickChat (agent-owner 1-on-1), stream output, temp numbers, and file transfer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "samaidev", email = "samaidev@users.noreply.github.com"},
]
keywords = ["aicq", "ai-agent", "sdk", "encrypted-chat", "e2ee", "nacl", "ed25519", "ephemeral", "websocket", "quickchat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "pynacl>=1.5",
    "PyJWT>=2.8",
    "requests>=2.28",
    "qrcode>=7.4",
    "Pillow>=9.0",
]

[project.optional-dependencies]
agent = ["requests>=2.28"]
all = ["requests>=2.28"]

[project.urls]
Homepage = "https://aicq.me"
Repository = "https://github.com/samaidev/aicq"
Issues = "https://github.com/samaidev/aicq/issues"

[project.scripts]
aicq = "aicq:main"

[tool.setuptools.packages.find]
# 显式只打包 aicq/ 子目录，避免把 go/ 和 nodejs/ 误识别为 Python 包
include = ["aicq*"]
exclude = ["go*", "nodejs*", "tests*"]
